Style header image. Stop image from overflowing on mobile.

--- a/style.css
+++ b/style.css
@@ -53,9 +53,20 @@ button {
     font-weight: 900;
 }
 
+.header-left-col {
+    flex: auto;
+}
+
+.header-right-col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 100%;
+}
+
 .header-right-col > img {
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 100%;
+    max-height: 100%;
     border-radius: 8px;
 }
 
